src/sass/_imageSearch.scss
body {
  font-family: Kurale;
  background-color: #f5f4fa;
}

img {
  display: block;
  width: 100%;
  height: 250px;
  object-fit: cover;
}

.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;

  padding-top: 30px;
  padding-bottom: 30px;
  background-color: #4e4651;
  box-shadow: 5px 5px 20px;
}

.search-form {
  display: flex;
  justify-content: center;
  gap: 30px;
}

.container {
  display: flex;
  flex-direction: column;
  gap: 30px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 50px;
  padding-right: 50px;
}

.gallery {
  display: flex;
  flex-wrap: wrap;
  gap: 30px;
  padding-top: 120px;
}

.photo-card {
  background: #fff;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  border-radius: 8px;
  width: calc((100% - 90px) / 4);

  &:hover {
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  }
}

.info {
  padding-left: 20px;
  padding-right: 20px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 40px;
}

.info-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

.load-more-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-bottom: 30px;
}

